--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -52,7 +52,10 @@
                 <h2 class="text-center" style="color:rgb(255,255,255);">Become a Good Citizen</h2>
                 <p class="text-center" style="color:rgb(172,200,232);">Sign Up and share a post about an incident to create awareness. Be a Good Citizen</p>
             </div>
-            <div class="buttons"><a class="btn btn-primary" role="button" href="signup.html">sign up</a><a class="btn btn-light" role="button" href="login.html">log in</a></div>
+            <div class="buttons">
+                <a class="btn btn-primary" role="button" href="{% url 'register' %}">sign up</a>
+                <a class="btn btn-light" role="button" href="{% url 'login' %}">log in</a>
+            </div>
         </div>
     </div>
     <div class="testimonials-clean" style="background-color:rgb(49,52,55);">
