Fix registration, login page and run tests

--- a/static/css/Login-Form-Dark-1.css
+++ b/static/css/Login-Form-Dark-1.css
@@ -1,19 +1,10 @@
-.login-dark {
-  height:1000px;
-  background-size:cover;
-  position:relative;
-}
 
 .login-dark form {
-  max-width:320px;
-  width:90%;
+  padding: 1.2rem;
+  max-width: max-content;
   background-color:#1e2833;
   padding:40px;
   border-radius:4px;
-  transform:translate(-50%, -50%);
-  position:absolute;
-  top:50%;
-  left:50%;
   color:#fff;
   box-shadow:3px 3px 4px rgba(0,0,0,0.2);
 }
@@ -64,8 +55,3 @@
   opacity:1;
   text-decoration:none;
 }
-
-.login-dark form .btn-primary:active {
-  transform:translateY(1px);
-}
-
