--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
+{% load bootstrap4 %}
 <html>
 <head>
     <meta charset="utf-8">
@@ -24,6 +25,9 @@
     <link rel="stylesheet" href="{% static 'css/Testimonials.css' %}">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+
+    {% bootstrap_css %}
+    {% bootstrap_javascript jquery='full' %}
 
 
     {% block head %} {% endblock head %}
