--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,15 +1,25 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load bootstrap4 %}
 {% block title %} Login {% endblock title %}
 {% block content %}
 
-<div class="login-dark" style="background-color:#090d14;height:538px;">
-    <form method="post">
+<div class="login-dark py-4" style="background-color:#090d14;height:538px;">
+    <form method="post" style="max-width: 720px">
+        {% csrf_token %}
         <h2 class="sr-only">Login Form</h2>
-        <div class="illustration"><i class="icon ion-ios-locked-outline"></i></div>
-        <div class="form-group"><input class="form-control" type="text" name="username" required placeholder="Username" autofocus=""></div>
-        <div class="form-group"><input class="form-control" type="password" name="password" required placeholder="Password"></div>
-        <div class="form-group"><button class="btn btn-primary btn-block" type="submit" style="background-color:#007bff;">Log In</button></div>
+        <div class="illustration">
+            <i class="icon ion-ios-locked-outline"></i>
+        </div>
+        {{ request.user.username }}
+        {% bootstrap_form form %}
+        <div class="form-group">
+            <button class="btn btn-primary btn-block" type="submit" style="background-color:#007bff;">Log In</button>
+        </div>
+
+        <p class="text-white">Don't have an account yet ? 
+            <a href="{% url 'register' %}">create account</a>
+        </p>
     </form>
 </div>
 
