--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,16 +1,29 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load bootstrap4 %}
 {% block title %} User registration {% endblock title %}
 
 {% block content %}
-    <div class="login-dark" style="background-color:#090d14;height:538px;">
-        <form method="post">
-            <h2 class="sr-only">Login Form</h2>
+    <div class="login-dark py-2" style="background-color:#090d14;">
+        <form method="post" style="max-width: 720px">
+            {% csrf_token %}
+            <h2 class="sr-only">User registration form</h2>
             <div class="illustration"><i class="fa fa-user"></i></div>
-            <div class="form-group"><input class="form-control" type="text" placeholder="Username" required></div>
-            <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Email" required></div>
-            <div class="form-group"><input class="form-control" type="password" name="password" placeholder="Password" required></div>
-            <div class="form-group"><button class="btn btn-primary btn-block" type="submit" style="background-color:#007bff;">Sign Up</button></div>
+            {% if form.errors %}
+                {% for field in form %}
+                    {% for error in field.errors %}
+                        <p class="text-sm text-danger">{{ error }}</p>
+                    {% endfor %}
+                {% endfor %}
+            {% endif %}
+
+            {% bootstrap_form form %}
+            <div class="form-group">
+                <button class="btn btn-primary btn-block" type="submit" style="background-color:#007bff;">Sign Up</button>
+            </div>
+            <p class="text-white">already have an account ? 
+                <a href="{% url 'login' %}">login</a>
+            </p>
         </form>
     </div>
 {% endblock content %}
