Transform report from Template to FormView

--- a/core/templates/core/reports.html
+++ b/core/templates/core/reports.html
@@ -7,15 +7,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <form method="post" enctype="multipart/form-data">
+                    <form method="post" enctype="multipart/form-data" class="text-white">
+                        {% csrf_token %}
                         <h2 class="text-center text-light">Report Incident</h2>
-                        <div class="form-group">
-                            <textarea class="form-control" required="" autofocus="" placeholder="Title"></textarea>
-                        </div>
-                        <div class="form-group"><textarea class="form-control" required="" placeholder="What is going on" style="height:293px;"></textarea></div>
-                        <div class="form-group">
-                            <p>Upload Video of Incident</p>
-                            <p>&nbsp;</p><input type="file" accept="video/*" required=""></div>
+                        {% bootstrap_form form %}
                         <div class="form-group">
                             <button class="btn btn-primary btn-block" type="submit" style="background-color:#007bff;">Report</button>
                         </div>
