--- a/core/templates/core/reports.html
+++ b/core/templates/core/reports.html
@@ -2,6 +2,9 @@
 {% load bootstrap4 %}
 {% load static %}
 {% block title %} Report {% endblock title %}
+{% block head %}
+    {{ form.media.css }}
+{% endblock head %}
 {% block content %}
     <div style="background-color:rgb(9,13,20);">
         <div class="container">
@@ -25,3 +28,7 @@
         </div>
     </div>
 {% endblock content %}
+
+{% block script %}
+    {{ form.media.js }}
+{% endblock script %}
