--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,9 @@
                 class="collapse navbar-collapse" id="navcol-1" style="width:0px;">
                 <ul class="nav navbar-nav ml-auto">
                     <a class="nav-link " href="{% url 'core:home' %}" style="color:rgb(255,255,255);">Home</a>
+                    {% if request.user.is_authenticated %}
                     <a class="nav-link" href="{% url 'core:report' %}" style="color:rgb(255,255,255);">Report</a>
+                    {% endif %}
                     <a class="nav-link" href="news.html" style="color:rgb(255,255,255);">News</a>
                     <a class="nav-link" href="cities.html" style="color:rgb(255,255,255);">Cities</a>
                 </ul>
