Improve pages (cities & navbar)

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -27,7 +27,7 @@
             </div>
         </div>
     </div>
-    <div style="background-color:#090d14;padding:40px;">
+    <div style="background-color:#090d14;padding:40px;" class=".d-sm-none .d-md-block .d-none .d-sm-block">
         <div class="container">
             <div class="row">
                 <div class="col-md-4"><i class="fa fa-angle-double-down d-block" style="color:rgb(62,140,228);font-size:76px;padding:0px;padding-left:134px;"></i>
