--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -46,3 +46,73 @@ iframe {
   border-top-right-radius:10px;
 }
 
+.navbar.navbar-light.navbar-expand-md.navigation-clean-search {
+  border-bottom:1px solid #313437;
+}
+
+.navbar.navbar-light.navbar-expand-md.navigation-clean {
+  border-bottom:1px solid #313437;
+}
+
+.footer-dark {
+  border-top:1px solid #313437;
+}
+
+@media (min-width: 768px) {
+  .carousel-inner .active, .carousel-inner .active + .carousel-item, .carousel-inner .active + .carousel-item + .carousel-item {
+    display:block;
+  }
+}
+
+@media (min-width: 768px) {
+  .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left), .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item, .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item + .carousel-item {
+    transition:none;
+  }
+}
+
+@media (min-width: 768px) {
+  .carousel-inner .carousel-item-next, .carousel-inner .carousel-item-prev {
+    position:relative;
+    transform:translate3d(0, 0, 0);
+  }
+}
+
+@media (min-width: 768px) {
+  .carousel-inner .active.carousel-item + .carousel-item + .carousel-item + .carousel-item {
+    position:absolute;
+    top:0;
+    right:-33.3333%;
+    z-index:-1;
+    display:block;
+    visibility:visible;
+  }
+}
+
+@media (min-width: 768px) {
+  .active.carousel-item-left + .carousel-item-next.carousel-item-left, .carousel-item-next.carousel-item-left + .carousel-item, .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item, .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item + .carousel-item {
+    position:relative;
+    transform:translate3d(-100%, 0, 0);
+    visibility:visible;
+  }
+}
+
+@media (min-width: 768px) {
+  .carousel-inner .carousel-item-prev.carousel-item-right {
+    position:absolute;
+    top:0;
+    left:0;
+    z-index:-1;
+    display:block;
+    visibility:visible;
+  }
+}
+
+@media (min-width: 768px) {
+  .active.carousel-item-right + .carousel-item-prev.carousel-item-right, .carousel-item-prev.carousel-item-right + .carousel-item, .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item, .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item + .carousel-item {
+    /*position:relative;*/
+    transform:translate3d(100%, 0, 0);
+    visibility:visible;
+    display:block;
+    visibility:visible;
+  }
+}
