--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,6 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Barlow">
@@ -27,9 +26,6 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 
-    {% bootstrap_css %}
-    {% bootstrap_javascript jquery='full' %}
-
 
     {% block head %} {% endblock head %}
     <title>Safe Nigeria - {% block title %} {% endblock title %}</title>
@@ -44,31 +40,35 @@
                     navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1" style="width:0px;">
                 <ul class="nav navbar-nav ml-auto">
-                    <a class="nav-link " href="{% url 'core:home' %}" style="color:rgb(255,255,255);">Home</a>
-                    {% if request.user.is_authenticated %}
-                    <a class="nav-link" href="{% url 'core:report' %}" style="color:rgb(255,255,255);">Report</a>
-                    {% endif %}
+                    <a class="nav-link " href="{% url 'core:home' %}" style="color:rgb(255,255,255);">Home</a>                    
                     <a class="nav-link" href="{% url 'core:news' %}" style="color:rgb(255,255,255);">News</a>
                     <a class="nav-link" href="{% url 'core:cities' %}" style="color:rgb(255,255,255);">Cities</a>
+                    {% if request.user.is_authenticated %}
+                    <a class="nav-link" href="{% url 'core:report' %}" style="color:rgb(255,255,255);">Report</a>
                     <li class="dropdown">
                         <a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
                             href="#" style="color:rgb(255,255,255);">
-
-                            <i class="fa fa-user" style="font-size:20px;">
-                            </i>&nbsp; Hello {{ request.user.username }}&nbsp;
+                            <i class="fa fa-user" style="font-size:20px;"></i>
+                            &nbsp; Hello {{ request.user.username }}&nbsp;
                         </a>
                         <div class="dropdown-menu" role="menu">
+                            
                             <a class="dropdown-item" role="presentation" href="#">
                                 <i class="fa fa-gear" style="font-size:20px;"></i>
                                 &nbsp;Account Setting
                             </a>
 
-                            <a class="dropdown-item" role="presentation" href="#">
+                            <a class="dropdown-item" role="presentation" href="{% url 'logout' %}">
                                 <i class="fa fa-sign-out" style="font-size:20px;">
-                                </i>&nbsp;Log Out<br>
+                                </i>&nbsp;<span class="text-danger">Log out</span><br>
                             </a>
+                        
                         </div>
                     </li>
+                    {% else %}
+                        <a href="{% url 'register' %}" class="nav-link btn btn-sm text-primary btn-outline-warning">
+                            Create account</a>
+                    {% endif %}
                 </ul>
             </div>
         </div>
