--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
                         </div>
                     </li>
                     {% else %}
-                        <a href="{% url 'register' %}" class="nav-link btn btn-sm text-primary btn-outline-warning">
+                        <a href="{% url 'register' %}" class="nav-link btn btn-sm text-white btn-primary">
                             Create account</a>
                     {% endif %}
                 </ul>
