--- a/core/templates/core/reports.html
+++ b/core/templates/core/reports.html
@@ -4,6 +4,11 @@
 {% block title %} Report {% endblock title %}
 {% block head %}
     {{ form.media.css }}
+    <style>
+        span.select2.select2-container.select2-container--default {
+            width: 100% !important;
+        }
+    </style>
 {% endblock head %}
 {% block content %}
     <div style="background-color:rgb(9,13,20);" class="py-4">
@@ -11,9 +16,16 @@
             <div class="row">
                 <div class="col-md-6">
                     <form method="post" enctype="multipart/form-data" class="text-white">
-                        {% csrf_token %}
                         <h2 class="text-center text-light">Report</h2>
                         <p class="text-center text-sm" style="color:rgb(27, 236, 255);">inform others about the latest occurrence in your area</p>
+                        {% csrf_token %}
+                        {% if form.errors %}
+                            {% for field in form %}
+                                {% for error in field.errors %}
+                                    <p class="text-sm text-white p-2 bg-danger">{{ error }}</p>
+                                {% endfor %}
+                            {% endfor %}
+                        {% endif %}
                         {% bootstrap_form form %}
                         <div class="form-group">
                             <button class="btn btn-primary btn-block" type="submit" style="background-color:#007bff;">Report</button>
