Include account settings, include location to Incident models

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -21,36 +21,39 @@
     <div class="highlight-blue" style="background-color:rgb(9,13,20);">
         <div class="container">
             <div class="intro">
-                <h2 class="text-center" style="width:606px;height:100px;margin-left:-59px;">
-                    <br><strong>KEEPING PEOPLE SAFE AND INFORMED</strong><br></h2>
+                    <h1 class="text-center" style="font-family:Lato, sans-serif;font-weight:bold;font-size:30px;">KEEPING PEOPLE SAFE AND INFORMED</h1>
                 <p><br>It would curb the gap in reporting emergencies and fake news online, since people now can tell their news, and comments on each posts would affirm the veracity of the news<br><br></p>
             </div>
         </div>
     </div>
-    <div style="background-color:#090d14;padding:40px;" class=".d-sm-none .d-md-block .d-none .d-sm-block">
+    <div style="background-color:#090d14;padding:40px;">
         <div class="container">
             <div class="row">
-                <div class="col-md-4"><i class="fa fa-angle-double-down d-block" style="color:rgb(62,140,228);font-size:76px;padding:0px;padding-left:134px;"></i>
+                <div class="col-md-4 d-none d-sm-block xs-block">
+                    <i class="fa fa-angle-double-down d-block" style="color:rgb(62,140,228);font-size:76px;padding:0px;padding-left:134px;"></i>
                     <p>&nbsp;</p><i class="fa fa-info d-block" style="font-size:76px;color:rgb(62,140,228);padding-left:144px;padding-top:17px;"></i>
                     <p>&nbsp;</p><i class="fa fa-volume-control-phone d-block" style="color:rgb(62,140,228);font-size:76px;padding:0px;padding-left:135px;padding-top:74px;"></i></div>
                 <div class="col-md-4" style="color:rgb(255,255,255);padding:0px;">
                     <div class="intro">
                         <h2 class="text-center d-block" style="padding:18px;">Democratizing NPF</h2>
-                        <h2 class="text-center d-block" style="padding:0px;"><br>Keeping citizens safe and informed<br><br></h2>
+                        <h2 class="text-center d-block visible" style="padding:0px;"><br>Keeping citizens safe and informed<br><br></h2>
                         <h2 class="text-center d-block"><br>Curbing the gap in reporting emergencies online<br><br></h2>
                     </div>
                 </div>
-                <div class="col-md-4"><i class="fa fa-angle-double-down d-block" style="color:rgb(62,140,228);font-size:76px;padding:0px;padding-left:146px;"></i>
+                <div class="col-md-4 d-none d-sm-block xs-block">
+                    <i class="fa fa-angle-double-down d-block" style="color:rgb(62,140,228);font-size:76px;padding:0px;padding-left:146px;"></i>
                     <p>&nbsp;</p><i class="fa fa-info d-block" style="font-size:76px;color:rgb(62,140,228);padding-left:158px;padding-top:17px;"></i>
                     <p>&nbsp;</p><i class="fa fa-volume-control-phone d-block" style="color:rgb(62,140,228);font-size:76px;padding:0px;padding-left:151px;padding-top:74px;"></i></div>
             </div>
         </div>
     </div>
+
     <div class="highlight-clean" style="background-color:rgb(9,13,20);">
         <div class="container">
             <div class="intro">
-                <h2 class="text-center" style="color:rgb(255,255,255);">Become a Good Citizen</h2>
-                <p class="text-center" style="color:rgb(172,200,232);">Sign Up and share a post about an incident to create awareness. Be a Good Citizen</p>
+                <h5 class="text-center text-white" style="font-family:Lato, sans-serif;">
+                    Making Nigeria safe begins with us
+                </h5>
             </div>
             <div class="buttons">
                 <a class="btn btn-primary" role="button" href="{% url 'register' %}">sign up</a>
