--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
                         </a>
                         <div class="dropdown-menu" role="menu">
                             
-                            <a class="dropdown-item" role="presentation" href="#">
+                            <a class="dropdown-item" role="presentation" href="{% url 'profile' request.user.id %}">
                                 <i class="fa fa-gear" style="font-size:20px;"></i>
                                 &nbsp;Account Setting
                             </a>
