Attempt to style error page :: 001 ::

--- a/core/templates/core/500.html
+++ b/core/templates/core/500.html
@@ -7,11 +7,12 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1 style="font-size:189px;font-weight:bold;padding-left:86px;">Ongoing Maintenance</h1>
-                <h5 class="text-capitalize" style="padding-left:85px;">
-                    There is currently an ongoing maintenance, 
+                <h1 style="font-size:40px;font-weight:bold" class="text-white mb-2">
+                    Ongoing Maintenance</h1>
+                <h3 class="text-capitalize">
+                    There is currently an ongoing maintenance for requested resource, 
                     we are so sorry for any inconveniences, please, kindly, check back later. Thanks.
-                </h5>
+                </h3>
             </div>
         </div>
     </div>
