--- a/core/templates/core/404.html
+++ b/core/templates/core/404.html
@@ -7,11 +7,13 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1 style="font-size:189px;font-weight:bold;padding-left:86px;">404</h1>
-                <h1 class="text-capitalize" style="padding-left:85px;">
-                    Oops!...Page not found
-                    &emsp; &emsp; <a href="{% url 'core:index' %}">go to homepage</a>
-                </h1>
+                <h1 style="font-size:40px;font-weight:bold" class="text-white mb-2">No resource found</h1>
+                <h3 class="text-capitalize">
+                    Oops!... resource requested not found
+                    &emsp; &emsp; 
+                    <a href="{% url 'core:index' %}" class="text-primary text-md">
+                        go to homepage</a>
+                </h3>
             </div>
         </div>
     </div>
