Attempt to style error pages :: 003 ::

--- a/core/templates/core/500.html
+++ b/core/templates/core/500.html
@@ -6,13 +6,13 @@
 <div style="background-color:#090d14;padding-top:46px;padding-bottom:36px;">
     <div class="container">
         <div class="row">
-            <div class="col-md-12" style="height: 365px; text-align: center;">
+            <div class="col-md-12" style="height: 370px; text-align: center;">
                 <h1 style="font-size:40px;font-weight:bold" class="text-white mb-2">
                     Ongoing Maintenance</h1>
-                <h3 class="text-capitalize" style="color: #afaeae">
+                <h5 style="color: #afaeae; padding-top: 22px">
                     There is currently an ongoing maintenance for requested resource, 
-                    we are so sorry for any inconveniences, please, kindly, check back later. Thanks.
-                </h3>
+                    we are so sorry for any inconveniences, kindly, check back later. Thank You.
+                </h5>
             </div>
         </div>
     </div>
