--- a/core/templates/core/404.html
+++ b/core/templates/core/404.html
@@ -6,14 +6,14 @@
 <div style="background-color:#090d14;padding-top:46px;padding-bottom:36px;height:">
     <div class="container">
         <div class="row">
-            <div class="col-md-12" style="height: 365px; text-align: center;">
+            <div class="col-md-12" style="height: 370px; text-align: center;">
                 <h1 style="font-size:40px;font-weight:bold" class="text-white mb-2">No resource found</h1>
-                <h3 class="text-capitalize" style="color: #afaeae">
+                <h5 style="color: #afaeae; padding-top: 22px;">
                     Oops!... resource requested not found
                     &emsp; &emsp; 
                     <a href="{% url 'core:index' %}" class="text-primary text-md">
                         go to homepage</a>
-                </h3>
+                </h5>
             </div>
         </div>
     </div>
