Fix navbar responsive icon on small device, and 404/500 error message

--- a/core/templates/core/500.html
+++ b/core/templates/core/500.html
@@ -7,11 +7,12 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12" style="height: 370px; text-align: center;">
-                <h1 style="font-size:40px;font-weight:bold" class="text-white mb-2">
-                    Ongoing Maintenance</h1>
-                <h5 style="color: #afaeae; padding-top: 22px">
-                    There is currently an ongoing maintenance for requested resource, 
-                    we are so sorry for any inconveniences, kindly, check back later. Thank You.
+                <h1 style="font-size:40px;font-weight:bold" class="text-white mb-2">No resource found</h1>
+                <h5 style="color: #afaeae; padding-top: 22px;">
+                    Oops!... resource requested not found
+                    &emsp; &emsp; 
+                    <a href="{% url 'core:index' %}" class="text-primary text-md">
+                        go to homepage</a>
                 </h5>
             </div>
         </div>
